# MemAloc

./: .gitignore  CMakeLists.txt  CONCEPTS.md  README.md  SPEC.md
src/: my_malloc.c  my_malloc.h
tests/: tests.c
